# rust-blog

./: .env  .gitignore  Trunk.toml  run.sh
backend/: Cargo.toml
backend/src/: app.rs  lib.rs  main.rs
backend/src/api/: health.rs  mod.rs
blog/: Cargo.toml  dockerfile
blog/src/: lib.rs  main.rs
frontend/: .env  Cargo.toml  Trunk.toml  index.html  start.sh  style.css
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/components/: article.rs  mod.rs  navbar.rs
frontend/src/pages/: home.rs  login.rs
frontend/src/router/: mod.rs
