[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
yew = { version = "0.20.0", features = ["ssr"] }
frontend = { path = "../frontend" }
actix-web = "4.3.0"
actix-files = "0.6.2"
env_logger = "0.10.0"


